// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > should render 1`] = `
<ul
  class="_root_b04820"
>
  <li
    class="_li_b04820"
  >
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
  </li>
  <li
    class="_li_b04820"
  >
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
  </li>
  <li
    class="_li_b04820"
  >
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
  </li>
  <li
    class="_li_b04820"
  >
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
  </li>
</ul>
`;

exports[`List > should render with subsection left 1`] = `
<ul
  class="_root_b04820"
>
  <li
    class="_li_b04820"
  >
    <div>
      <div
        class="_root_4f1acc"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
  </li>
  <li
    class="_li_b04820"
  >
    <div>
      <div
        class="_root_4f1acc"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
  </li>
  <li
    class="_li_b04820"
  >
    <div>
      <div
        class="_root_4f1acc"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
  </li>
  <li
    class="_li_b04820"
  >
    <div>
      <div
        class="_root_4f1acc"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
  </li>
</ul>
`;

exports[`List > should render with subsection right 1`] = `
<ul
  class="_root_b04820"
>
  <li
    class="_li_b04820"
  >
    <div>
      <div
        class="_root_4f1acc"
        role="img"
        style="background-image: url("");"
      />
    </div>
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_64ffb3 _root_d5edcf"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_d5edcf"
        >
          Test
        </span>
      </button>
    </div>
  </li>
  <li
    class="_li_b04820"
  >
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_64ffb3 _root_d5edcf"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_d5edcf"
        >
          Test
        </span>
      </button>
    </div>
  </li>
  <li
    class="_li_b04820"
  >
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_64ffb3 _root_d5edcf"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_d5edcf"
        >
          Test
        </span>
      </button>
    </div>
  </li>
  <li
    class="_li_b04820"
  >
    <div
      class="_mainSection_b04820"
    >
      Test
    </div>
    <div>
      <button
        aria-current="false"
        class="_root_64ffb3 _root_d5edcf"
        data-variant="default"
        role="button"
        type="button"
      >
        <span
          class="_label_d5edcf"
        >
          Test
        </span>
      </button>
    </div>
  </li>
</ul>
`;
